--- a/Style.css
+++ b/Style.css
@@ -255,7 +255,7 @@ header a:hover{
             rgba(0,0,0,0.5),
             rgba(0,0,0,0.5)
         )
-        ,url("../img/Pollo.jpg");
+        ,url("./img/Pollo.jpg");
     
     }
 
@@ -267,7 +267,7 @@ header a:hover{
             rgba(0,0,0,0.5),
             rgba(0,0,0,0.5)
         )
-        ,url("img/babyshowerjpg.jpg");
+        ,url("./img/babyshowerjpg.jpg");
     }
     
     .carta:nth-child(3){
@@ -277,7 +277,7 @@ header a:hover{
             rgba(0,0,0,0.5),
             rgba(0,0,0,0.5)
         )
-        ,url("img/Ferretería.jpg");
+        ,url("./img/Ferretería.jpg");
     
     }
 
