--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,6 @@
 *{
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 body{
@@ -32,12 +33,12 @@ a{text-decoration: none;
     border: 2px solid rgba(0,0,0,0.3);
     box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
     color: white;
-    background-color: blueviolet;
+    background-color: rgb(34, 92, 174);
 }
 
 
 button:hover{
-    background-color: rgb(101, 33, 165);
+    background-color: rgb(27, 39, 166);
 }
 
 .container{
@@ -48,7 +49,7 @@ header .logo{
     margin: 0;
     padding: 25px 30px;
     font-weight: bold;
-    color: rgba(68, 36, 154, 0.765);
+    color: rgba(33, 92, 165, 0.765);
     font-size: 1.6em;
 }
 
@@ -72,11 +73,12 @@ header a{
 }
 
 header a:hover{
-    color: blueviolet;
+    color: rgb(35, 143, 186);
 }
 
 #Hero{
-   background-image: url("");
+    padding: 10px;
+    background-image: url("");
     background-size: cover;
     height: 80vh;}
     #Hero{
@@ -99,50 +101,14 @@ header a:hover{
 
 
 
-/*inicio  del carrusel */
-   
-    .carrucel {
-        height: 20vh;
-        display: flex;
-        align-items: center;
-    }
-
-
-   .carrucel-items{
-    display: flex;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    padding: 30px 0px;
-   }
-   
-   .carrucel-item{
-    min-width: 165px;
-    max-width: 165px;
-    height: 120px;
-    outline: 1px solid black;
-    cursor: context-menu;
-}
-
-
-    .carrucel-item img{
-        width: 85%;
-        height: 98%;
-        counter-reset: none;
-        object-fit: cover;
-        transition: 0.3s;
-    }
-
-    .carrucel-item:hover{
-        transform: scale(1.1);}
-
-
-/*fin del carrusel */
-
     #Hero h1{
+
         color: white;
 
     }
     
+
+
     #Hero button{
         font-size: 1.75em;
     }
@@ -154,16 +120,48 @@ header a:hover{
         justify-content: center;
         text-align: center;
         flex-direction: column;
-        background-color: beige;
+        margin: 0;
     }
 
 
-  /*  #Acerca-de-mi .carrucel{
-        background-color: aqua;
-        height: 115px;
-        width: 80%;
-        margin: 30px 10px;
-    }*/
+/*inicio  del carrusel */
+  
+  .carrusel {
+    height: 50vh;
+    display: flex;
+    align-items: center;
+  }
+  
+  .carrucel-items {
+    background-color: rgba(85, 119, 161, 0.694);
+    display: flex;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    padding: 30px 0px;
+  }
+  
+  .carrucel-item {
+    min-width: 180px;
+    max-width: 180px;
+    height: 140px;
+    outline: 2px solid black;
+    cursor: pointer;
+    overflow-y: hidden;
+  }
+  
+  .carrucel-item img {
+    width: 100%;
+    height: 100%;
+    object-fit:contain;
+
+  }
+  
+  .carrucel-item:hover {
+    transform: scale(1.2);
+}
+
+
+/*fin del carrusel */
 
 
     #Mis-proyectos {
@@ -171,6 +169,7 @@ header a:hover{
         color: white;
         padding: 0 10px;
         background-color: rgba(11, 5, 5, 0.923);
+    
     }
 
     #Mis-proyectos .container{
@@ -209,6 +208,7 @@ header a:hover{
             rgba(0,0,0,0.5)
         )
         ,url("./img/Pollo.jpg");
+       
     
     }
 
@@ -251,7 +251,11 @@ header a:hover{
         align-items: flex-end;
     }
 
-    @media (min-width: 850px){
+
+
+
+
+    @media  (min-width: 850px){
         header{
             position: fixed;
             width: 100%;
@@ -271,21 +275,6 @@ header a:hover{
             font-size: 5em;
         }
     
-        #Acerca-de-mi.container{
-            display: flex;
-            justify-content: space-evenly;
-        }
-    
-        #Acerca-de-mi.texto{
-            width: 50%;
-            max-width: 600px;
-            text-align: initial;
-            padding-left: 30px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-    
         #Acerca-de-mi h2{
             margin-top: 0px;
         }
@@ -301,7 +290,6 @@ header a:hover{
 
         #Acerca-de-mi .texto{
             width: 50%;
-            max-width: 600px;
             text-align: initial;
             padding-left: 30px;
             display: flex;
@@ -317,7 +305,7 @@ header a:hover{
             width: 220px; 
             border-radius: 15px;
         }
-    
+
         #Mis-proyectos .programas{
             display: flex;
             justify-content: center;
@@ -335,7 +323,14 @@ header a:hover{
         #Mis-proyectos h3{
             margin-top: 0;
         }
-    /*
+        #Mis-proyectos .carta{
+          width: 33.33%;
+        }
+    
+    }
+
+    
+        /*
         #Mis-proyectos .carta{
             padding: 50px;
             background-size: 100% 150px;
@@ -373,24 +368,24 @@ header a:hover{
             ,url("media/Ferretería.jpg");
     
         }
-    */
-        #caracteristicas{
-            background-image: url("media/background-2.jpeg");
-            background-repeat: no-repeat;
-            background-size: 500px 400px;
-            background-position: calc(100vw - 500px) 120px;
-        }
+    *
 
     }
-    
-    @media (min-width: 1200px) {
-        #caracteristicas{
-            background-position-x: calc(100vw - 800px);
-        }
+    /*
+    @media (min-width: 1000px) {
+      #Acerca-de-mi{
+        margin: 0;
+      }
 
+      #Acerca-de-mi .texto{
+        color:rgb(14, 47, 47);
+      }
+ 
+      
+     
     
-        
+      
     }
-
+  */
 
    
