--- a/Style.css
+++ b/Style.css
@@ -123,6 +123,17 @@ header a:hover{
         margin: 0;
     }
 
+/*miraaaa*/
+.container .ella{
+    justify-content: right;
+    /*margin: 0 38.5%;*/
+    text-align: center;
+    padding-bottom:  20px;
+}
+
+
+    
+
 
 /*inicio  del carrusel */
   
