--- a/Style.css
+++ b/Style.css
@@ -128,10 +128,11 @@ header a:hover{
     justify-content: right;
     /*margin: 0 38.5%;*/
     text-align: center;
-    padding-bottom:  20px;
 }
 
-
+.ella{
+ padding-bottom: 60px;
+}
     
 
 
